[metadata]
description-file = README.md

[nosetests]
where=simpleml/tests

[coverage:run]
branch = True
command_line = simpleml/tests/__init__.py
parallel = False
relative_files = True
source = simpleml/

[coverage:report]
ignore_errors = True
omit = simpleml/migrations/*
       simpleml/tests/*
       *.pyc
       *.pyo
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    def __str__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    __all__
    import
    deprecated_warning
    in_development_warning
    __author__
